hphp/hack/test/typecheck/function_pointer/class_const_this_bad.php.exp
File "class_const_this_bad.php", line 7, characters 10-21:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
